/thread/:threadId delete method added to swagger
